[package]
name = "ustunet"
version = "0.1.0"
authors = ["wzhd"]
edition="2018"

[dependencies]
managed = { version = "0.7", default-features = false, features = ["map"] }
log = "0.3"
tun = { version = "0.4.4" }
tokio-fd = "0.1.0"
snafu = "0.6.3"
futures = "0.3"
[dependencies.trilock]
git = "https://github.com/wzhd/trilock.git"

[dependencies.smoltcp]
path = "../ustcp"
default-features=true

[dependencies.tokio]
version = "0.2"
features = [
  "sync",
  "time",
  "rt-threaded",
  "io-util",
  "io-driver",
  "stream",
  "tcp", # Only used in examples
  "macros",
]

[dev-dependencies]
pretty_env_logger = "0.4"
argh = "0.1"
